# beholder

./: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.public-http.yml  docker-compose.yml  pyproject.toml  requirements.txt  sdd.md
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/skills/: README.md  analise_intencoes_transcricao_cliente.md  avaliacao_de_risco_em_atendimento_ao_cli.md  churn_classifier.md  gerartabela.md  orientador_retentivo_intencao_atendimento.md  radar_intent.md  radar_summary.md
app/templates/: base.html
app/text2sql/: AGENTS.md
app/workers/: __init__.py  healthcheck.py  payments_extraction.py  payments_ingest.py
docs/: DATA_INVENTORY.json  DATA_INVENTORY.md  DEPLOY-HOSTINGER.md  PHASE1_GATE_RESULTS.md  PRE_B_FINDINGS.md  PRE_C_FINDINGS.md  SDD.md  SDD_GAPS.md
scripts/: backup.sh  bulk_approve_pdfs.py  deploy.sh  docker_entrypoint.sh  dump_docx.py  extract_real_pdfs.py  extract_remaining_pdfs.py  fix_text2sql.py  gen_secrets.sh  ingest_real_data.py  init_db.py  install_docker.sh  inventory_data.py  probe_msrv5.py  restore.sh  run_engines.py  sample_xlsx.py  spike_pdf_maritaca.py  summarize_wf_probe.py  unzip_contracts.py
scripts/acceptance/: run_phase1_gate.py  run_phase2_engine.py
tests/: conftest.py  test_auth.py  test_bko_service.py  test_churn.py  test_radar.py  test_raiox_phase0.py
tests/payments/: conftest.py  test_desvios_ui.py  test_document_store_fs.py  test_domain_tracer.py  test_dramatiq_setup.py  test_extracao_ui.py  (+3 more)
(+226 files in other folders)
