[project]
name = "beholder"
version = "0.1.0"
description = "Plataforma de monitoramento e validação contínua de pagamentos em escala — fork de Vértice"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
